force-app/main/default/objects/Project__c/fields/AmountProject__c.field-meta.xml
<CustomField>
    <fullName>AmountProject__c</fullName>
    <formula>TotalAmountArquitec__c +  TotalAmountConsult__c +  TotalAmountDeveloper__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProjectCurrentCost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>