force-app/main/default/objects/Project__c/fields/Assigned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Hours__c</fullName>
    <label>Assigned Hours</label>
    <summarizedField>ResourceProject__c.Assigned_Hours__c</summarizedField>
    <summaryForeignKey>ResourceProject__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>