force-app/main/default/objects/Project__c/fields/Closed_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Closed_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closed Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>