force-app/main/default/objects/Project__c/fields/HoursQuantity__c.field-meta.xml
<CustomField>
    <fullName>HoursQuantity__c</fullName>
    <label>HoursQuantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>