force-app/main/default/objects/Project__c/fields/PendingHours__c.field-meta.xml
<CustomField>
    <fullName>PendingHours__c</fullName>
    <formula>HoursQuantity__c - Assigned_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PendingHours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>