force-app/main/default/objects/Project__c/fields/Project_End__c.field-meta.xml
<CustomField>
    <fullName>Project_End__c</fullName>
    <label>Project End</label>
    <required>true</required>
    <type>Date</type>
</CustomField>