force-app/main/default/objects/Project__c/fields/QuantityHourArchitect__c.field-meta.xml
<CustomField>
    <fullName>QuantityHourArchitect__c</fullName>
    <defaultValue>0</defaultValue>
    <label>QuantityHourArchitect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>