force-app/main/default/objects/Project__c/fields/QuantityHourConsult__c.field-meta.xml
<CustomField>
    <fullName>QuantityHourConsult__c</fullName>
    <defaultValue>0</defaultValue>
    <label>QuantityHourConsult</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>