force-app/main/default/objects/Project__c/fields/QuantityHourDeveloper__c.field-meta.xml
<CustomField>
    <fullName>QuantityHourDeveloper__c</fullName>
    <defaultValue>0</defaultValue>
    <label>QuantityHourDeveloper</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>