force-app/main/default/objects/Project__c/fields/RatePerHour__c.field-meta.xml
<CustomField>
    <fullName>RatePerHour__c</fullName>
    <label>RatePerHourArchitect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>