force-app/main/default/objects/Project__c/fields/RatePerHourConsultant__c.field-meta.xml
<CustomField>
    <fullName>RatePerHourConsultant__c</fullName>
    <label>RatePerHourConsultant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>