force-app/main/default/objects/Project__c/fields/RatePerHourDeveloper__c.field-meta.xml
<CustomField>
    <fullName>RatePerHourDeveloper__c</fullName>
    <label>RatePerHourDeveloper</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>