force-app/main/default/objects/Project__c/fields/TotalAmountArquitec__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountArquitec__c</fullName>
    <label>TotalAmountArchitech</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>