force-app/main/default/objects/Project__c/fields/TotalAmountConsult__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountConsult__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TotalAmountConsult</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>