force-app/main/default/objects/Project__c/fields/TotalAmountDeveloper__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountDeveloper__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TotalAmountDeveloper</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>