force-app/main/default/objects/Project__c/fields/Win_or_Lose__c.field-meta.xml
<CustomField>
    <fullName>Win_or_Lose__c</fullName>
    <formula>( Amount__c -  AmountProject__c ) /  Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win or Lose</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>