force-app/main/default/objects/Project__c/validationRules/Project_in_progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_in_progress</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
NOT(ISCHANGED(State__c))
)</errorConditionFormula>
    <errorMessage>The Proyect is In Progress and no modifications can be done</errorMessage>
</ValidationRule>