force-app/main/default/objects/Project__c/listViews/MyProjects.listView-meta.xml
<ListView>
    <fullName>MyProjects</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>Project_Start__c</columns>
    <columns>Project_End__c</columns>
    <columns>Squad_Lead__c</columns>
    <columns>PendingHours__c</columns>
    <filterScope>Mine</filterScope>
    <label>MyProjects</label>
</ListView>